--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Digital Businnes</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-50DJMF42EE"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-50DJMF42EE");
+  </script>
   <body>
     <div class="navbar" id="navbar">
       <div class="logo">
